--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-1.62MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-695.6KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇩🇪 德国-248.4KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇸🇬 新加坡-1.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇦 加拿大-765.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.31MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-674.0KB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-650.6KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-613.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-745.7KB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-771.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.14MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-940.2KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1006.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.59MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-674.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-650.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-613.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-745.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
