--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-691.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-839.5KB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-715.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇩🇪 德国-771.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇩🇪 德国-1.14MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-940.2KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-691.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-839.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-715.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
