--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-983.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-381.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇦 加拿大-580.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-771.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.14MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-940.2KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.59MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-550.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: 116.129.254.192, port: 16306, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-397.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-449.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-226.9KB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.51MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-574.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-3.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-861.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-983.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-381.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-771.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
