--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-550.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: 116.129.254.192, port: 16306, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-397.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-449.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-226.9KB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.85MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-216.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.40MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-161.6KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.51MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-574.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇸🇬 新加坡-3.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-550.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-397.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-216.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.49MB/s(Youtube:不良林)
